# ruscel

./: Cargo.toml
src/: main.rs
src/cli/: cli.rs  mod.rs
src/consumer/: consumer.rs  mod.rs
src/consumer/thread_consumer/: mod.rs  thread_consumer.rs
src/fs/: mod.rs
src/fs/backend/: backend.rs  mod.rs
src/fs/backend/rabbitmq/: mod.rs  rabbitmq.rs
src/fs/config/: config.rs
src/fs/consumer/: consumer.rs
src/fs/consumer/thread_consumer/: thread_consumer.rs
src/fs/message/: message.rs
