[package]
name = "ruscel"
version = "0.1.0"
authors = ["manish"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.3.3", default-features = false }
clap = { version = "2.33.1", features = ["suggestions"] }
crossbeam-channel = { version = "0.4" }
crossbeam-utils = { version = "0.7" }
log = { version = "0.4.8" }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = { version = "1.0.53" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }